Hexagonal Architecture 3 : add first functionality

--- a/workspace/schedule/adapters/db/build.gradle
+++ b/workspace/schedule/adapters/db/build.gradle
@@ -6,17 +6,24 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework:spring-core'
+    implementation 'com.fasterxml.jackson.core:jackson-core'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'org.apache.commons:commons-lang3'
+    implementation 'org.apache.commons:commons-collections4'
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.mapdb:mapdb:3.1.0'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit' // excluding junit 4
     }
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
-    testImplementation 'com.tngtech.archunit:archunit:1.2.1'
-    testImplementation 'de.adesso:junit-insights:1.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation 'com.tngtech.archunit:archunit'
+    testImplementation 'de.adesso:junit-insights'
 }
 
 test {
