--- a/workspace/schedule/adapters/web/build.gradle
+++ b/workspace/schedule/adapters/web/build.gradle
@@ -1,21 +1,23 @@
 dependencies {
     implementation project(':domain')
     implementation project(':application')
-    
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.mapdb:mapdb:3.1.0'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit' // excluding junit 4
     }
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
-    testImplementation 'com.tngtech.archunit:archunit:1.2.1'
-    testImplementation 'de.adesso:junit-insights:1.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation 'com.tngtech.archunit:archunit'
+    testImplementation 'de.adesso:junit-insights'
 }
 
 test {
